// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalVoteBasketWidget /> should hide votes button when anon vote is enabled and user is anonymous  1`] = `
<ProposalVoteBasketWidget__NavBar
  backgroundColor="#FFF"
  borderColor="#AAA"
  buttonBgColor="#CCC"
  buttonTextColor="#000"
  collapsed={true}
  fixedTop={true}
  isBudget={false}
  newNavbar={false}
  textColor="#333"
>
  <div>
    <div>
      <div>
        <ProposalVoteBasketWidget__BlockContainer>
          <Icon
            color="#333"
            name="urne"
            size={25}
          />
          <ProposalVoteBasketWidget__InfoContainer
            borderColor="#AAA"
          >
            <FormattedMessage
              id="project.preview.counters.votes"
              tagName="p"
              values={
                Object {
                  "count": 5,
                  "num": 5,
                }
              }
            />
            <p
              id="vote-counter"
            >
              5
            </p>
          </ProposalVoteBasketWidget__InfoContainer>
        </ProposalVoteBasketWidget__BlockContainer>
        <div />
      </div>
    </div>
  </div>
</ProposalVoteBasketWidget__NavBar>
`;

exports[`<ProposalVoteBasketWidget /> should render a vote widget for a budget vote 1`] = `
<ProposalVoteBasketWidget__NavBar
  backgroundColor="#FFF"
  borderColor="#AAA"
  buttonBgColor="#CCC"
  buttonTextColor="#000"
  collapsed={true}
  fixedTop={true}
  isBudget={false}
  newNavbar={false}
  textColor="#333"
>
  <div>
    <div>
      <div>
        <ProposalVoteBasketWidget__BlockContainer>
          <Icon
            color="#333"
            name="urne"
            size={25}
          />
          <ProposalVoteBasketWidget__InfoContainer
            borderColor="#AAA"
          >
            <FormattedMessage
              id="project.preview.counters.votes"
              tagName="p"
              values={
                Object {
                  "count": 1,
                  "num": 1,
                }
              }
            />
            <p
              id="vote-counter"
            >
              1
            </p>
          </ProposalVoteBasketWidget__InfoContainer>
        </ProposalVoteBasketWidget__BlockContainer>
        <div />
      </div>
    </div>
  </div>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="default"
    className="widget__button "
    disabled={false}
    href="/projects//consult/votes"
  >
    <FormattedMessage
      id="project.votes.title"
      values={Object {}}
    />
  </Button>
</ProposalVoteBasketWidget__NavBar>
`;

exports[`<ProposalVoteBasketWidget /> should render a vote widget for a simple support with limit 1`] = `
<ProposalVoteBasketWidget__NavBar
  backgroundColor="#FFF"
  borderColor="#AAA"
  buttonBgColor="#CCC"
  buttonTextColor="#000"
  collapsed={true}
  fixedTop={true}
  isBudget={false}
  newNavbar={false}
  textColor="#333"
>
  <div>
    <div>
      <div>
        <ProposalVoteBasketWidget__BlockContainer>
          <Icon
            color="#333"
            name="vote"
            size={25}
          />
          <ProposalVoteBasketWidget__InfoContainer
            borderColor="#AAA"
          >
            <FormattedMessage
              id="support.count_no_nb"
              tagName="p"
              values={
                Object {
                  "count": 0,
                  "num": 0,
                }
              }
            />
            <p
              id="vote-counter"
            >
              0
            </p>
          </ProposalVoteBasketWidget__InfoContainer>
        </ProposalVoteBasketWidget__BlockContainer>
        <div>
          <ProposalVoteBasketWidget__BlockContainer>
            <ProposalVoteBasketWidget__InfoContainer
              borderColor="#AAA"
              noMargin={false}
              separate={false}
            >
              <FormattedMessage
                id="global-maximum"
                tagName="p"
                values={Object {}}
              />
              <p>
                2
              </p>
            </ProposalVoteBasketWidget__InfoContainer>
          </ProposalVoteBasketWidget__BlockContainer>
        </div>
      </div>
    </div>
  </div>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="default"
    className="widget__button "
    disabled={false}
    href="/projects//interpell/votes"
  >
    <FormattedMessage
      id="project.supports.title"
      values={Object {}}
    />
  </Button>
</ProposalVoteBasketWidget__NavBar>
`;

exports[`<ProposalVoteBasketWidget /> should render a vote widget for a simple vote with limit 1`] = `
<ProposalVoteBasketWidget__NavBar
  backgroundColor="#FFF"
  borderColor="#AAA"
  buttonBgColor="#CCC"
  buttonTextColor="#000"
  collapsed={true}
  fixedTop={true}
  isBudget={false}
  newNavbar={false}
  textColor="#333"
>
  <div>
    <div>
      <div>
        <ProposalVoteBasketWidget__BlockContainer>
          <Icon
            color="#333"
            name="urne"
            size={25}
          />
          <ProposalVoteBasketWidget__InfoContainer
            borderColor="#AAA"
          >
            <FormattedMessage
              id="project.preview.counters.votes"
              tagName="p"
              values={
                Object {
                  "count": 2,
                  "num": 2,
                }
              }
            />
            <p
              id="vote-counter"
            >
              2
            </p>
          </ProposalVoteBasketWidget__InfoContainer>
        </ProposalVoteBasketWidget__BlockContainer>
        <div>
          <ProposalVoteBasketWidget__BlockContainer>
            <ProposalVoteBasketWidget__InfoContainer
              borderColor="#AAA"
              noMargin={false}
              separate={false}
            >
              <FormattedMessage
                id="global-maximum"
                tagName="p"
                values={Object {}}
              />
              <p>
                2
              </p>
            </ProposalVoteBasketWidget__InfoContainer>
          </ProposalVoteBasketWidget__BlockContainer>
        </div>
      </div>
    </div>
  </div>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="default"
    className="widget__button "
    disabled={false}
    href="/projects//consult/votes"
  >
    <FormattedMessage
      id="project.votes.title"
      values={Object {}}
    />
  </Button>
</ProposalVoteBasketWidget__NavBar>
`;

exports[`<ProposalVoteBasketWidget /> should render a vote widget for a simple vote without limit 1`] = `
<ProposalVoteBasketWidget__NavBar
  backgroundColor="#FFF"
  borderColor="#AAA"
  buttonBgColor="#CCC"
  buttonTextColor="#000"
  collapsed={true}
  fixedTop={true}
  isBudget={false}
  newNavbar={false}
  textColor="#333"
>
  <div>
    <div>
      <div>
        <ProposalVoteBasketWidget__BlockContainer>
          <Icon
            color="#333"
            name="urne"
            size={25}
          />
          <ProposalVoteBasketWidget__InfoContainer
            borderColor="#AAA"
          >
            <FormattedMessage
              id="project.preview.counters.votes"
              tagName="p"
              values={
                Object {
                  "count": 5,
                  "num": 5,
                }
              }
            />
            <p
              id="vote-counter"
            >
              5
            </p>
          </ProposalVoteBasketWidget__InfoContainer>
        </ProposalVoteBasketWidget__BlockContainer>
        <div />
      </div>
    </div>
  </div>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="default"
    className="widget__button "
    disabled={false}
    href="/projects//consult/votes"
  >
    <FormattedMessage
      id="project.votes.title"
      values={Object {}}
    />
  </Button>
</ProposalVoteBasketWidget__NavBar>
`;
